# QReader_donut

./: README.md  pyproject.toml
original_setup_files/: setup.py
src/qreader/: __init__.py
src/qreader_donut/: __init__.py
src/qreader_donut.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
